--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/Gold-Road-Dynamics/images/fav-icon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>gold-road-dynamics</title>
+    <title>Gold Road Dynamics</title>
   </head>
   <body>
     <div id="root"></div>
